bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: type mismatch;
 found   : Int(7)
 required: Boolean
  if (talking && (0<hour<7)) {
                         ^ParotTrouble:4: error: type mismatch;
 found   : Int(23)
 required: Boolean
  } else if (talking && (20<hour<23)) {
                                 ^