bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking && (0<hour<7)) {
    return true
  } else if (talking && (20<hour<23)) {
    return true
  } else {
    return false
  }
  }